# E22_Senior_Design

./: .gitignore  CMakeLists.txt  GoldenForm_1.kicad_pro  GoldenForm_1.kicad_sch  README.md  ReadMe_Modular.md  install.sh  log  requirements.txt  sdkconfig  sdkconfig.defaults  view_logs.sh
.github/: CODEOWNERS
components/visualization/: CMakeLists.txt  README.md  live_imu_3d.html  live_imu_visualizer.py
dashboard/: .env.example  app.css  app.js  ble_dashboard.html  ble_server.py  database.py  gemini_coaching.py  generate_mock_data.py  hand_track.json  hand_track_viewer.html  integrated_session_viewer.html  requirements-calibration.txt  run_session_logger.py  serve_integrated.py  session_logger.py  session_visualizer.html  simple_imu_3d.html  simple_imu_visualizer.py  stroke_video_calibration.html  stroke_video_track.py  test_ideal_comparison.py  visualizer.js  wifi_session_processor.py
demo_jsons/: goldenform_Session_1_-_Apr_09_02_46_PM_raw.json  goldenform_Session_1_-_Apr_13_10_53_AM_raw.json
docs/: GOLDENFORM_PDP_CODE_MAP.md  README.md  TIDR_ARCHITECTURE_GUIDE.md  TIDR_QUICK_REFERENCE.md  TIDR_VERIFICATION_REPORT.md
hardware/: #auto_saved_files#  CUI_MSD-4-A.kicad_mod  GoldenForm_1.csv  GoldenForm_1.kicad_pcb  GoldenForm_1.kicad_pro  GoldenForm_1.kicad_sch  GoldenForm_1.kicad_sch-bak  INDM5752X300N.kicad_mod  MySymbols.kicad_sym  ReadMe.md  SON50P250X250X80-11N.kicad_mod  SOT95P237X112-3N.kicad_mod  fp-lib-table  sym-lib-table  ~GoldenForm_1.kicad_pcb.lck
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main_ble.c  dummy_imu.c  dummy_imu.h  main.c  (+3 more)
(+174 files in other folders)
