# Visualization Component CMakeLists.txt
# This component provides web-based visualization for swimming motion analysis

idf_component_register(
    SRCS ""
    INCLUDE_DIRS "."
)

# Note: This component contains web-based visualization files
# The HTML/JS files are for development and testing purposes
# In production, these would be served by a web server or embedded system
